objects/Support__c.object
<CustomObject>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <formula>UnitBodyLink__r.AcceptanceDateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CallCenterUketsukeNo_Sync__c</fullName>
        <externalId>true</externalId>
        <label>コールセンター受付No_連携用</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <formula>ServiceAreaBranchA__c  &amp;
 IF ( OR( OR( ISNULL(ServiceAreaBranchA__c  )  , ServiceAreaBranchA__c = &quot;&quot; ) ,OR( ISNULL(ServiceAreaName__c) ) , ServiceAreaName__c= &quot;&quot; ) , &quot;&quot;, &quot;：&quot;)
 &amp;  ServiceAreaName__c</formula>
        <label>センター</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationDeal1__c</fullName>
        <label>処置１</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationDeal2__c</fullName>
        <label>処置２</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationDeal3__c</fullName>
        <label>処置３</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMatter__c</fullName>
        <label>サポート員への連絡事項</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerAffiliation__c</fullName>
        <label>御所属</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <label>顧客コード</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerContactPerson__c</fullName>
        <label>御担当者</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerExtension__c</fullName>
        <label>内線</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerFacultyOffice__c</fullName>
        <label>学部事業所</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>顧客名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPhone__c</fullName>
        <label>電話</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EfProductNoEndDate__c</fullName>
        <formula>UnitBodyLink__r.EFEndDateFormula__c</formula>
        <label>EF終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EfProductNoSNI__c</fullName>
        <formula>UnitBodyLink__r.EFProductNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EF製番</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureCause1__c</fullName>
        <label>原因１</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureCause2__c</fullName>
        <label>原因２</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureCause3__c</fullName>
        <label>原因３</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultLocation1__c</fullName>
        <label>障害１</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultLocation2__c</fullName>
        <label>障害２</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultLocation3__c</fullName>
        <label>障害３</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>UnitBody__c &amp; &quot; &quot; &amp;  ModelNamePI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体号機&amp;機種名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstSupportPerson__c</fullName>
        <label>一次対応者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kikaku__c</fullName>
        <formula>UnitBodyLink__r.Standard__c</formula>
        <label>規格</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceSerialNo__c</fullName>
        <label>保守契約製番</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceSituation__c</fullName>
        <formula>UnitBodyLink__r.SvcForm__c</formula>
        <label>保守契約状況</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelNamePI__c</fullName>
        <formula>UnitBodyLink__r.ModelName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelPI__c</fullName>
        <formula>UnitBodyLink__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNo__c</fullName>
        <label>製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceptionDate__c</fullName>
        <formula>DATE( YEAR( DATEVALUE(ReceptionDatetime__c) ), MONTH( DATEVALUE(ReceptionDatetime__c) ), DAY( DATEVALUE(ReceptionDatetime__c) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受付日時（日付型）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReceptionDatetime__c</fullName>
        <label>受付日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RelevanceCcReceiptNo__c</fullName>
        <label>関連コールセンタ受付番号</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestContent1__c</fullName>
        <label>依頼内容１</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestContent2__c</fullName>
        <label>依頼内容２</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestContent3__c</fullName>
        <label>依頼内容３</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responce__c</fullName>
        <label>対応内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>顧客対応票</relationshipLabel>
        <relationshipName>SalesCustomer2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrderNo__c</fullName>
        <label>販売オーダ番号</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_EndDate__c</fullName>
        <label>検索終点日付</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Search_StartDate__c</fullName>
        <label>検索始点日付</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SecondSupportPerson__c</fullName>
        <label>二次対応者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNoItemsLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>シリアル番号付品目</label>
        <referenceTo>SerialNoProductItem__c</referenceTo>
        <relationshipLabel>顧客対応票</relationshipLabel>
        <relationshipName>SerialNoItems2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeriesPI__c</fullName>
        <formula>UnitBodyLink__r.Series__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>系列</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series_SameRoleSharing__c</fullName>
        <label>系列_共有設定用</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaBranchA__c</fullName>
        <formula>SalesCustomer__r.ServiceAreaBranch__c</formula>
        <label>サービスエリア支店</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaName__c</fullName>
        <formula>SalesCustomer__r.ServiceArea__c</formula>
        <label>サービスエリア名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCompletedDateFormula__c</fullName>
        <formula>Datevalue(ServiceCompletedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceCompletedDate__c</fullName>
        <label>完了日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceDate2__c</fullName>
        <label>受付日</label>
        <picklist>
            <picklistValues>
                <fullName>受付開始日</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>受付終了日</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>対応日</label>
        <picklist>
            <picklistValues>
                <fullName>対応開始日</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>対応終了日</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceEndDate__c</fullName>
        <label>顧客対応終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServicePerson__c</fullName>
        <label>担当者</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceStartDate__c</fullName>
        <label>顧客対応開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceTypeCode__c</fullName>
        <label>サービス種別コード</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceUketuskeNaiyou__c</fullName>
        <formula>IF ( NOT(ISNULL(RequestContent1__c)) , RequestContent1__c , &quot;&quot;) &amp; &quot; &quot; &amp;
IF ( NOT(ISNULL(RequestContent2__c)) , RequestContent2__c , &quot;&quot;) &amp; &quot; &quot; &amp;
IF ( NOT(ISNULL(RequestContent3__c)) , RequestContent3__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>サービス処理内容</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipDate__c</fullName>
        <formula>UnitBodyLink__r.ShippingDateFormula__c</formula>
        <label>本体納入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpecialNote__c</fullName>
        <formula>UnitBodyLink__r.SpecialContractNote__c</formula>
        <label>特別契約メモ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>コール応答中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>コール保留</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>対応依頼</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>一次対応中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>一次対応終了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>一次対応にて完了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>二次対応中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>二次対応完了</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SupportPerson__c</fullName>
        <formula>FirstSupportPerson__c &amp; &apos; &apos; &amp; SecondSupportPerson__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>対応者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfService__c</fullName>
        <label>サービス種別</label>
        <picklist>
            <picklistValues>
                <fullName>1：パーコール</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2：保守点検</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3：オーバホール</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4：改造（WS）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5：移転</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6：納入</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7：その他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8：出荷済工事</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A:パーコール-D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B:保守D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C:Ｏ・Ｈ-Ｄ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D:移転Ｄ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E:ＷＳ-Ｄ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F:納入D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G:ＥＦ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H:設置室</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I:設置室D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J:周辺機器</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K:周辺機器Ｄ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L:対策工事</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M:講習</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N:受託分析</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O:営業支援</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P:対策ME①</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q:対策ME②</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R:対策ME③</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UketsukeSupportPerson__c</fullName>
        <label>受付対応者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBodyLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>顧客対応票</relationshipLabel>
        <relationshipName>Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <label>本体号機</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WasteSituation1__c</fullName>
        <label>廃棄状況</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WasteSituation__c</fullName>
        <formula>UnitBodyLink__r.WasteSituation__c</formula>
        <label>廃棄情報</label>
        <type>Text</type>
    </fields>
    <label>顧客対応票</label>
    <listViews>
        <fullName>ER</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>NAME</columns>
        <columns>ModelNamePI__c</columns>
        <columns>Center__c</columns>
        <columns>FirstSupportPerson__c</columns>
        <columns>RequestContent1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesPI__c</field>
            <operation>contains</operation>
            <value>ER</value>
        </filters>
        <filters>
            <field>ReceptionDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2015</value>
        </filters>
        <filters>
            <field>Center__c</field>
            <operation>contains</operation>
            <value>名古屋</value>
        </filters>
        <filters>
            <field>Center__c</field>
            <operation>contains</operation>
            <value>大阪</value>
        </filters>
        <filters>
            <field>Center__c</field>
            <operation>contains</operation>
            <value>高松</value>
        </filters>
        <filters>
            <field>Center__c</field>
            <operation>contains</operation>
            <value>広島</value>
        </filters>
        <filters>
            <field>Center__c</field>
            <operation>contains</operation>
            <value>福岡</value>
        </filters>
        <label>ER_西日本</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View12</fullName>
        <columns>NAME</columns>
        <columns>SalesCustomer__c</columns>
        <columns>CustomerFacultyOffice__c</columns>
        <columns>ModelNamePI__c</columns>
        <columns>Status__c</columns>
        <columns>RequestContent1__c</columns>
        <columns>RequestContent2__c</columns>
        <columns>RequestContent3__c</columns>
        <columns>FirstSupportPerson__c</columns>
        <columns>SecondSupportPerson__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesPI__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>ReceptionDatetime__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017 12:00 AM</value>
        </filters>
        <label>気になる</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View4</fullName>
        <columns>ReceptionDate__c</columns>
        <columns>ModelNamePI__c</columns>
        <columns>CustomerContactPerson__c</columns>
        <columns>FirstSupportPerson__c</columns>
        <columns>SecondSupportPerson__c</columns>
        <columns>RequestContent1__c</columns>
        <columns>Responce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomerCode__c</field>
            <operation>contains</operation>
            <value>1002475</value>
        </filters>
        <filters>
            <field>SeriesPI__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>ServiceStartDate__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2010</value>
        </filters>
        <label>大阪市大（医）の対応履歴（堀井さん用レポート）</label>
    </listViews>
    <listViews>
        <fullName>View5</fullName>
        <columns>NAME</columns>
        <columns>SeriesPI__c</columns>
        <columns>ModelNamePI__c</columns>
        <columns>CustomerContactPerson__c</columns>
        <columns>RequestContent1__c</columns>
        <columns>FirstSupportPerson__c</columns>
        <columns>Responce__c</columns>
        <columns>SecondSupportPerson__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomerCode__c</field>
            <operation>contains</operation>
            <value>3009701</value>
        </filters>
        <filters>
            <field>SeriesPI__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>ServiceStartDate__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2010</value>
        </filters>
        <label>小山高専の対応履歴（村田さん用レポート）</label>
    </listViews>
    <listViews>
        <fullName>View_MainSearch</fullName>
        <columns>NAME</columns>
        <columns>ModelPI__c</columns>
        <columns>ModelNamePI__c</columns>
        <columns>CustomerCode__c</columns>
        <columns>CustomerName__c</columns>
        <columns>UnitBody__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UnitBody__c</field>
            <operation>equals</operation>
            <value>MP142065-0065</value>
        </filters>
        <label>本体号機で検索</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View_all</fullName>
        <columns>NAME</columns>
        <columns>SalesCustomer__c</columns>
        <columns>CustomerFacultyOffice__c</columns>
        <columns>ModelNamePI__c</columns>
        <columns>Status__c</columns>
        <columns>RequestContent1__c</columns>
        <columns>RequestContent2__c</columns>
        <columns>RequestContent3__c</columns>
        <columns>FirstSupportPerson__c</columns>
        <columns>SecondSupportPerson__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SeriesPI__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <label>すべて</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>コールセンター受付番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>BumonRoleSharing__c</fullName>
        <label>部門のロールへの共有</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KeiretsuRoleSharing__c</fullName>
        <label>系列のロールへの共有</label>
    </sharingReasons>
</CustomObject>